clusters/folly/apps/netbench/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbench
  labels:
    app.kubernetes.io/name: netbench
    app.kubernetes.io/part-of: netbench
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
