clusters/folly/apps/netbench/05-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: netbench-gateway
  namespace: netbench
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-gateway
      protocol: HTTP
      port: 80
      hostname: &hostname "netbench.${SECRET_DOMAIN}"
    - name: tls-gateway
      protocol: HTTPS
      port: 443
      hostname: *hostname
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: netbench-http-route
  namespace: netbench
spec:
  parentRefs:
    - name: netbench-gateway
  hostnames:
    - "netbench.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: netbench
          port: 8080
